--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,15 +19,20 @@ jobs:
   check-format:
     name: "Check C++ Formatting"
     runs-on: ubuntu-latest
+
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v4
-      - name: "Install clang-format"
-        run: sudo apt-get update && sudo apt-get install -y clang-format-15
+
+      - name: "Install clang-format-18"
+        # Installe une version moderne qui correspond mieux aux IDE actuels
+        run: sudo apt-get update && sudo apt-get install -y clang-format-18
+
       - name: "Run clang-format check"
+        # Utilise la version 18 pour la vérification
         run: |
           find include/ examples/ tests/ -name "*.hpp" -o -name "*.cpp" | \
-          xargs clang-format-15 --dry-run --Werror
+          xargs clang-format-18 --dry-run --Werror
 
   # === 2. Build & Test sur Windows (MSVC) ===
   build-windows:
