--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,12 @@ jobs:
   check-format:
     name: "Check C++ Formatting"
     runs-on: ubuntu-latest
-
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v4
-
       - name: "Install clang-format-18"
-        # Installe une version moderne qui correspond mieux aux IDE actuels
         run: sudo apt-get update && sudo apt-get install -y clang-format-18
-
       - name: "Run clang-format check"
-        # Utilise la version 18 pour la vérification
         run: |
           find include/ examples/ tests/ -name "*.hpp" -o -name "*.cpp" | \
           xargs clang-format-18 --dry-run --Werror
@@ -45,13 +40,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Run Vcpkg (Install & Cache)"
-        # (CORRECTION DÉFINITIVE) - Utilisation de l'action GITHUB officielle
-        uses: actions/run-vcpkg@v1
+        # (CORRECTION DÉFINITIVE ICI) - Action communautaire standard
+        uses: lukka/run-vcpkg@v11
         with:
-          # On dit à vcpkg où s'installer (sera mis en cache)
-          vcpkgDirectory: ${{ runner.workspace }}/vcpkg
-          # On s'assure qu'il utilise le vcpkg.json à la racine
+          # Trouve vcpkg.json et installe les dépendances
           vcpkgJsonGlob: "**/vcpkg.json"
+          # Cette action définit env.VCPKG_ROOT
 
       - name: "Configure CMake (MSVC Release)"
         run: cmake --preset windows-msvc-release -B build_win -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake
@@ -76,11 +70,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Run Vcpkg (Install & Cache)"
-        # (CORRECTION DÉFINITIVE) - Utilisation de l'action GITHUB officielle
-        uses: actions/run-vcpkg@v1
+        # (CORRECTION DÉFINITIVE ICI) - Action communautaire standard
+        uses: lukka/run-vcpkg@v11
         with:
-          vcpkgDirectory: ${{ runner.workspace }}/vcpkg
           vcpkgJsonGlob: "**/vcpkg.json"
+          # Cette action définit env.VCPKG_ROOT
 
       - name: "Configure CMake (Linux Debug)"
         run: |
