Ajout de l'installation de Vcpkg pour créer la doc. Modification du README pour que les badges soient corrects.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,11 @@ jobs:
       - name: "Install Doxygen"
         run: sudo apt-get update && sudo apt-get install -y doxygen
 
+      - name: "Run Vcpkg (Install & Cache)"
+        uses: lukka/run-vcpkg@v11
+        with:
+          vcpkgJsonGlob: "**/vcpkg.json"
+
       - name: "Configure CMake"
         run: cmake -B build_doc -S .
 
