modification readme + correction CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
           vcpkgJsonGlob: "**/vcpkg.json"
 
       - name: "Configure CMake"
-        run: cmake -B build_doc -S .
+        run: cmake -B build_doc -S . -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake
 
       - name: "Build 'doc' target"
         run: cmake --build build_doc --target doc
